# Tetris

./: .gitignore  CMakeLists.txt  TODO  TetrisClient.cc  TetrisClient.h  TetrisServer.cc  TetrisServer.h  main.cpp  run.sh
lib/: CMakeCache.txt  CMakeLists.txt  Controls.h  Deserializer.cc  Deserializer.h  DisplayGame.cc  DisplayGame.h  GameArea.cc  GameArea.h  Grid.cc  Grid.h  Makefile  Serial.cc  Serial.h  Serializer.cc  Serializer.h  Tetromino.cc  Tetromino.h  cmake_install.cmake
rapport/: rapportTetris.tex  soutenance.tex
rapport/img/: archi_reseau.odg
ressources/: case.psd
